fpp_analysis/src/test/redef/port_module.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/redef/port_module.fpp:2:8
  |
2 | module P { }
  |        ^ redefinition of symbol P
  |
 ::: [ local path prefix ]/redef/port_module.fpp:1:1
  |
1 | port P
  | ------ previous definition is here

